--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,16 @@
-# Composer Dependencies
+# Composer-Abhängigkeiten
 /vendor/
 composer.lock
-vendor
 
-# Environment Files
-.env
-.env.local
-.env.*.local
-
-# Logs & Cache
-logs/
-cache/
-phpunit.log
-
-# PHPUnit
-phpunit.xml
-phpunit.xml.dist
-
-# IDE & Editor Files
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# OS-Spezifische Dateien
+# Systemdateien (macOS, Windows)
 .DS_Store
 Thumbs.db
 
-# Dev-Files
-weclapp-apiv1-chat.md
-package.json
-/tests/
-/unittests/
-*.txt
-*.7z
-*.zip
+# Umgebungsvariablen
+.env
+
+# Test-Skripte & Debug-Dateien (nicht versionieren)
+tests/debug/
+tests/test*
+tests/bootstrap.php
+!tests/.env.example
