feat: Complete API v2 migration with all missing features
ðŸš€ Major Release: Migration auf weclapp API v2

Phase 1: API-Version-UnterstÃ¼tzung
- Flexible API-Version im Konstruktor (Standard: v2, Legacy: v1)
- Dynamische URL-Generierung basierend auf API-Version
- getApiVersion() Getter-Methode fÃ¼r Debugging

Phase 2: Erweiterte Filter-Operatoren
- whereNotNull(), whereNotIn() fÃ¼r vollstÃ¤ndige Filter-Abdeckung
- OR-Filterung: orWhere(), orWhereEq(), orWhereNe(), etc.
- OR-Gruppierung: orWhereGroup() fÃ¼r komplexe gruppierte OR-AusdrÃ¼cke
- Filter-AusdrÃ¼cke: whereRaw() fÃ¼r Beta-Feature komplexer Filter

Phase 3: VollstÃ¤ndiges Error Handling (RFC 7807)
- 40+ Error Codes fÃ¼r alle weclapp API-Fehlertypen
- RFC 7807 Mapping: getType(), getTitle(), getDetail(), getInstance()
- Strukturierte WeclappValidationError Klasse
- Automatische Typ-Erkennung mit fromApiType()

Phase 4: Performance-Optimierungen
- includeReferencedEntities() - LÃ¤dt referenzierte EntitÃ¤ten in einer Anfrage
- properties() - Selektive Feldauswahl fÃ¼r Bandbreiten-Optimierung
- additionalProperties() - Optionale berechnete Eigenschaften

Phase 5: Erweiterte Update-Funktionen
- partialUpdate() und update(, true) mit ignoreMissingProperties
- dryRun() fÃ¼r sichere Validierung ohne AusfÃ¼hrung
- serializeNulls() fÃ¼r explizite Null-Werte

Phase 6: Dokumentation & Versionierung
- composer.json auf v2.0.0 aktualisiert
- VollstÃ¤ndiges CHANGELOG mit Migration Guide
- Alle neuen Features dokumentiert

Breaking Changes (Minimal):
- Standard-API-Version Ã¤ndert sich von v1 auf v2 (Legacy v1 weiter nutzbar)
- Update-Methode: Neue Signatur update(array , bool  = false)

Der Client ist jetzt vollstÃ¤ndig und unterstÃ¼tzt alle weclapp API v2 Features!

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "voipcompetencecenter/weclappclient",
-    "description": "Ein PHP-Client für die Weclapp REST-API v1",
-    "version": "1.0.1",
+    "description": "Ein PHP-Client für die Weclapp REST-API v2 mit vollständiger Feature-Unterstützung",
+    "version": "2.0.0",
     "authors": [
         {
             "name": "Frank Alegria",
@@ -19,7 +19,9 @@
         "weclapp",
         "rest-api",
         "php",
-        "client"
+        "client",
+        "v2",
+        "rfc7807"
     ],
     "homepage": "https://github.com/VCC-Common-Tools/weclappclient",
     "autoload": {
